objects/FSL_Announcements__mdt.object
<CustomObject>
    <description>To maintain Announcements data for Dealer Evolution and Distributor Evolution</description>
    <fields>
        <fullName>Announcement_Name__c</fullName>
        <label>Announcement Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Navigation_URL__c</fullName>
        <label>Navigation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                    <default>true</default>
                    <label>Dealer</label>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FSL Announcements</label>
    <listViews>
        <fullName>All_Colums</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Announcement_Name__c</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Colums</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>FSL Announcements</pluralLabel>
</CustomObject>